--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -4,7 +4,7 @@
 <header class="main-header sticky-header header-with-top">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand company-logo" href="index.html">
+      <a class="navbar-brand company-logo" href="{% url 'home' %}">
         <img src="{% static 'img/logos/black-logo.png' %}" alt="logo" />
       </a>
       <button
@@ -23,11 +23,7 @@
           <li class="nav-item">
             <a
               class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdownMenuLink"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
+              href="{% url 'home' %}"
             >
               Home
             </a>
