--- a/templates/base.html
+++ b/templates/base.html
@@ -115,13 +115,13 @@
     <div id="full-page-search">
       <button type="button" class="close">×</button>
       <form
-        action="https://storage.googleapis.com/theme-vessel/carhouse/index.html#"
+        action="{% url 'search' %}"
         class="search-header"
       >
         <input
           type="search"
           value=""
-          placeholder="type keyword(s) here. Eg: audi, benz etc"
+          placeholder="type keyword(s) here. Eg: audi, benz etc" name='keyword'
         />
         <button type="submit" class="btn btn-sm button-theme">Search</button>
       </form>
